tdf#105772 apply all ODFF constraints with function SEARCH.

Now the function both complies with ODFF1.2 and behaves the same
as Excel does.

Change-Id: Ic49af48cacedbac54688266a916c5fa6e28bb5c4
Reviewed-on: https://gerrit.libreoffice.org/34037
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>